--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,11 +21,17 @@
             android:theme="@style/AppTheme.NoActionBar">
         </activity>
         <activity android:name=".FirebaseLoginActivity">
+            android:theme="@style/AppTheme.NoActionBar"
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".TaskCreationActivity"
+            android:label="Create Task"
+            android:theme="@style/AppTheme.NoActionBar">
         </activity>
     </application>
 
