--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,8 +20,8 @@
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
         </activity>
-        <activity android:name=".FirebaseLoginActivity">
-            android:theme="@style/AppTheme.NoActionBar"
+        <activity android:name=".FirebaseLoginActivity"
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -30,8 +30,7 @@
         </activity>
         <activity
             android:name=".TaskCreationActivity"
-            android:label="Create Task"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:label="Create Task">
         </activity>
     </application>
 
