Slightly updated task creation activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,6 +32,10 @@
             android:name=".TaskCreationActivity"
             android:label="Create Task">
         </activity>
+        <activity
+            android:name=".DateSelectionActivity"
+            android:label="Select a day">
+        </activity>
     </application>
 
 </manifest>
