Can now view details for a simple Task

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -53,6 +53,11 @@
             android:name=".AddUserToListActivity"
             android:label="Select applicable members">
         </activity>
+
+        <activity
+            android:name=".TaskDetailsActivity"
+            android:label="Task details">
+        </activity>
     </application>
 
 </manifest>
